实现基于Linux的Subversion整合Apache的管理实现。

--- a/dataservice-svnkit-module/service-integrates-svnkit-provider/src/main/resources/application-svnkit-provider-subversionhttp.properties
+++ b/dataservice-svnkit-module/service-integrates-svnkit-provider/src/main/resources/application-svnkit-provider-subversionhttp.properties
@@ -1,8 +1,8 @@
 # 指定应用名
-spring.application.name=dataservice-svnkit-producer-subversion
+spring.application.name=dataservice-svnkit-producer-subversionhttp
 
-# Linux Subversion 配置
-service.svnkit.version=subversion
+# Linux Subversion 整合 Apache 配置
+service.svnkit.version=subversionhttp
 service.svnkit.path=/data/subversion
 service.svnkit.svn-serve-conf=conf/svnserve.conf
 service.svnkit.passwd-file=svnpasswd
