--- a/dataservice-svnkit-springcloud/dataservice-svnkit-springcloud-producer/src/main/resources/application.properties
+++ b/dataservice-svnkit-springcloud/dataservice-svnkit-springcloud-producer/src/main/resources/application.properties
@@ -11,7 +11,15 @@ spring.application.name=dataservice-svnkit-producer
 #service.svnkit.authz-file=conf/VisualSVN-SvnAuthz.ini
 
 # Linux Subversion ≈‰÷√
-service.svnkit.version=subversion
+#service.svnkit.version=subversion
+#service.svnkit.path=/data/subversion
+#service.svnkit.svn-serve-conf=conf/svnserve.conf
+#service.svnkit.passwd-file=svnpasswd
+#service.svnkit.group-file=svnauthz
+#service.svnkit.authz-file=svnauthz
+
+# Linux Subversion ’˚∫œ Apache ≈‰÷√
+service.svnkit.version=subversionhttp
 service.svnkit.path=/data/subversion
 service.svnkit.svn-serve-conf=conf/svnserve.conf
 service.svnkit.passwd-file=svnpasswd
